Spacing corrected & font size

--- a/tools/css/home.css
+++ b/tools/css/home.css
@@ -33,7 +33,7 @@ body{padding: 0;margin: 0;}
 .font55{font-size: 55px;}
 .font65{font-size: 65px;}
 
-*{box-sizing: border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;/*-webkit-appearance: none;-moz-user-select: none;-webkit-user-select: none;-ms-user-select: none;*/}
+*{box-sizing: border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-webkit-appearance: none;-moz-user-select: none;-webkit-user-select: none;-ms-user-select: none;}
 .dn{display: none!important;}
 .fLeft{float:left!important}
 .fRight{float:right!important}
@@ -748,7 +748,7 @@ a{cursor:pointer;}
 .bgHolder{width:100%;height: 300px;background: #171334 url(../img/common/background.jpg)no-repeat;background-size: 100% auto;padding:220px 0 35px 0;}
 .heading{width:100%;height:auto; max-width:1200px; margin:auto;color:#fff;padding:0 10px 0 10px;}
 .abTex{ color:#333;height:600px ;padding:30px;}
-.texHolder{width:100%;height:auto;padding:20px;}
+.texHolder{width:100%;height:auto;padding:20px;line-height: 30px;}
 .wrapperA{width:100%;height:auto; display:inline-block;}
 .underLn{border-bottom:1px solid #EBEBDE;}
 .row{width:100%;height:auto;}
@@ -772,21 +772,20 @@ textarea[name=feedback] {resize: none;}
 .faq{}
 .faq .logo {position: absolute;}
 .ques{width:100%; height:auto;padding:10px 40px 10px 20px;margin-bottom:10px;  border-bottom:1px solid #EBEBDE; position:relative;cursor:pointer;background:#EBEBDE url(../img/common/down_arrow.svg)no-repeat;background-position: right center;border-radius:5px;}
-.ans{width:100%; height:auto;padding:0px 20px 0px 20px; border-bottom:1px solid #EBEBDE; position:relative; display:none;font-size:16px;}
+.ans{width:100%; height:auto;padding:0px 20px 0px 20px; border-bottom:1px solid #EBEBDE; position:relative; display:none;font-size:15px;}
 
 .dnArrow{height:50px;width:50px;position:absolute;top:0;left:0;}
 .padLeft{padding-left:50px !important;}
-.para{padding-bottom: 10px;}
+.para{padding-bottom: 10px;line-height: 25px;}
 /*Footer*/
 .pageLinks{height: auto;width: 100%;background:#8A0044;margin: 0;padding: 15px;border-top: 1px solid #fff;}
-.lowerFooterTab { width: auto;  height: 35px;  line-height: 35px;  cursor: pointer;  display: inline-block;  padding: 0 10px;  color: #fff;  font-size: 12px;    margin: 0 0 0 10px;
-    
-}
+.lowerFooterTab { width: auto;  height: 35px;  line-height: 35px;  cursor: pointer;  display: inline-block;  padding: 0 10px;  color: #fff;  font-size: 12px;    margin: 0 0 0 10px;}
+
+.texHolder  a{text-decoration: none;color:#8A0044;}
 
 
 
-
-
+h1,h2,h3,h4,h5{font-family: openB;color: #000;margin: 10px 0;}
 
 
 
